@@ -1,3 +1,9 @@
+2008-05-21  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclNamesp.c (Tcl_SetNamespaceUnknownHandler): Corrected odd
+	logic for handling installation of namespace unknown handlers which
+	could lead too very strange things happening in the error case.
+
 2008-05-16  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompile.c: fix crash with tcl_traceExec. Found and
